k8s/applications/prowlarr/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: prowlarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: prowlarr
          image: ghcr.io/linuxserver/prowlarr:1.36.2-develop
          ports:
            - name: ingress
              containerPort: 9696
          volumeMounts:
            - name: prowlarr
              mountPath: /config
          resources:
            limits:
              memory: 512Mi
            requests:
              cpu: 0.1
              memory: 512Mi
      volumes:
        - name: prowlarr
          persistentVolumeClaim:
            claimName: prowlarr
