k8s/applications/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
spec:
  type: ClusterIP
  ports:
    - name: prowlarr
      port: 9696
      targetPort: prowlarr
