k8s/applications/prowlarr/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("prowlarr.mchill.io")
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
